[project]
name = "testing-dynaconf"
version = "0.1.0"
description = "understand dynaconf full capabilities"
authors = [
    {name = "Juan Aguilar",email = "juanantonioaguilar@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
dynaconf = "^3.2.10"

